# rust

./: .gitignore  AUTHORS.md  BUILD.md  LICENSE  Launch-IntentKernel.bat  Makefile  README.md  TEST_ENVIRONMENT.md  build.bat  build_mingw.bat  build_vs.bat  idde.txt  name (1).txt  name (2).txt  name (3).txt  name.txt  newthesis (2).txt  setup_test_env.bat  static-analysis.datadog.yml
.github/workflows/: build.ps1  build.yml  clean.ps1  ip-discrambler.yml  linker.ld  main.yml  run-vmware.ps1
docs/: architecture_overview.md  crass_bridge.md  market_deployment_framework.md  thesis_proposal.md  token_rfc.md
governance/: principles.md
install/: README.md
install/linux/: install.sh
platform/: app.py
platform/api/: __init__.py  control.py  daemons.py  execution.py  ip_policy.py  logs.py
platform/core/: __init__.py  agents.py  config.py  determinism.py  evidence.py  execution.py  logger.py  persona.py  safety.py  skills.py
roadmap/: implementation_plan.md  intent_kernel_ai_os_product_requirements.md
rust/: ARCHITECTURE_GUIDE.md  CRATE_MAP.md  Cargo.toml  DEPENDENCY_GRAPH.md  DOCUMENTATION_INDEX.md  README.md
rust/crates/capd/: Cargo.toml
rust/crates/capd/src/: main.rs
rust/crates/capd/tests/: issue_verify.rs
rust/crates/eventscope/: Cargo.toml
rust/crates/eventscope/src/: main.rs
rust/crates/ikrl-ai/: Cargo.toml
rust/crates/ikrl-ai/src/: main.rs
rust/crates/ikrl-bench/: Cargo.toml
rust/crates/ikrl-bench/src/: main.rs
rust/crates/ikrl-bridge/: Cargo.toml
rust/crates/ikrl-bridge/src/: lib.rs  main.rs
rust/crates/ikrl-cli/: Cargo.toml
rust/crates/ikrl-cli/src/: main.rs
rust/crates/ikrl-cli/tests/: full_flow.rs
rust/crates/ikrl-federation/: Cargo.toml
rust/crates/ikrl-federation/src/: main.rs
rust/crates/ikrl-fs/: Cargo.toml
rust/crates/ikrl-fs/src/: main.rs
rust/crates/ikrl-init/: Cargo.toml
rust/crates/ikrl-init/src/: main.rs
rust/crates/ikrl-init/tests/: boot_flow.rs
rust/crates/ikrl-linux/: Cargo.toml
rust/crates/ikrl-linux/src/: lib.rs  main.rs  seccomp_notify.rs
rust/crates/ikrl-sdk/: Cargo.toml
rust/crates/ikrl-sdk/src/: lib.rs
rust/crates/ikrl-shell/: Cargo.toml
rust/crates/ikrl-shell/src/: main.rs
rust/crates/ikrl-sim/: Cargo.toml
rust/crates/ikrl-sim/src/: main.rs
rust/crates/ikrl-transport/: Cargo.toml
rust/crates/ikrl-transport/src/: lib.rs
rust/crates/ikrl-windows/: Cargo.toml
rust/crates/ikrl-windows/src/: main.rs
rust/crates/intentd/: Cargo.toml
rust/crates/intentd/src/: main.rs
rust/crates/intentkernel-core/: Cargo.toml
rust/crates/intentkernel-core/src/: ip_policy.rs  lib.rs
rust/crates/intentkernel-crypto/: Cargo.toml
rust/crates/intentkernel-crypto/src/: lib.rs  oqs_impl.rs
rust/crates/intentkernel-os/: Cargo.toml
rust/crates/intentkernel-os/src/: lib.rs
rust/crates/intentos/: Cargo.toml
rust/crates/intentos-audit/: Cargo.toml
rust/crates/intentos-audit/src/: lib.rs
rust/crates/intentos-bench/: Cargo.toml
rust/crates/intentos-bench/src/: lib.rs  markets.rs
rust/crates/intentos-hal/: Cargo.toml
rust/crates/intentos-hal/src/: lib.rs
rust/crates/intentos-kernel/: Cargo.toml
rust/crates/intentos-kernel/src/: broker.rs  card.rs  crypto.rs  error.rs  field.rs  ip_policy.rs  lease.rs  lib.rs  loom.rs  policy.rs  policy_pack.rs  recognizer.rs  revocation.rs  signals.rs  table.rs  threshold.rs  token.rs  types.rs
rust/crates/intentos-shell/: Cargo.toml
rust/crates/intentos-shell/src/: ai_os.rs  broker_cmd.rs  builtins.rs  kb_tui.rs  lib.rs  parser.rs  policy_cmd.rs  session.rs  tier.rs
rust/crates/intentos-utilities/: Cargo.toml
rust/crates/intentos-utilities/src/: ai.rs  broker_tcp.rs  broker_wire.rs  federation.rs  ip_discrambler.rs  lib.rs  loom_export.rs  loom_store.rs  market_status.rs  oobe_hooks.rs  tools.rs  vfs.rs
rust/crates/intentos-utilities/src/recognizer/: mod.rs  ollama.rs  pilot.rs
rust/crates/intentos-utilities/src/sectors/: mod.rs
rust/crates/intentos-utilities/src/sectors/banking/: mapper.rs  migration.rs  mod.rs
rust/crates/intentos-utilities/src/sectors/enterprise/: compatibility.rs  hardening.rs  identity.rs  ldap_live.rs  mapper.rs  migration.rs  mod.rs
rust/crates/intentos-utilities/src/sectors/financial_markets/: mapper.rs  migration.rs  mod.rs
rust/crates/intentos-utilities/src/sectors/healthcare/: mapper.rs  migration.rs  mod.rs
rust/crates/intentos-utilities/src/sectors/iot/: mapper.rs  migration.rs  mod.rs
rust/crates/intentos-utilities/src/sectors/public_safety/: mapper.rs  migration.rs  mod.rs
rust/crates/intentos/src/: main.rs
rust/crates/intentos/tests/: ai_os_mvp_pilot.rs  banking_pilot.rs  enterprise_hardening_pilot.rs  enterprise_pilot.rs  ground_up.rs  healthcare_pilot.rs  identity_pilot.rs  iot_pilot.rs  ip_discrambler_pilot.rs  kernel_revocation_pilot.rs  market_status_pilot.rs  markets_latency_pilot.rs  markets_pilot.rs  ollama_pilot.rs  phase2_integration.rs  public_safety_pilot.rs  vm_sandbox_pilot.rs
rust/crates/leasebroker/: Cargo.toml
rust/crates/leasebroker/src/: main.rs
rust/crates/ransomware-demo/: Cargo.toml
rust/crates/ransomware-demo/src/: main.rs
rust/demo_victim/: secret.txt
scripts/: build-host.ps1  build-kernel.ps1  build-pqc.ps1  build-pqc.sh  clean.ps1  launch-intentkernel.ps1  publish-ip-discrambler.ps1  run-qemu.ps1
src/: test_harness.c
terminals/: 1.txt  2.txt
thesis/: README.md  _reorganize_log.txt
tools/: intentos-vm-validate.ps1
tools/ip-discrambler/: .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  PUBLISH.md  README.md  openapi.yaml  pyproject.toml
tools/ip-discrambler/.github/workflows/: ci.yml
tools/ip-discrambler/examples/: batch_csv_pipeline.py  enrich_access_log.py  subnet_audit.py  threat_triage.py
tools/ip-discrambler/src/ip_discrambler/: __init__.py  bridge.py  cli.py  client.py  config.py  models.py  reverse_dns.py  serve.py  subnet.py
tools/ip-discrambler/src/ip_discrambler/providers/: __init__.py  geolocation.py  threat_intel.py  whois_rdap.py
tools/ip-discrambler/tests/: test_client.py  test_serve.py  test_subnet.py
(+159 files in other folders)
