[workspace]
members = [
    "crates/intentkernel-core",
    "crates/intentkernel-crypto",
    "crates/intentd",
    "crates/capd",
    "crates/leasebroker",
    "crates/eventscope",
    "crates/ikrl-sdk",
    "crates/ikrl-sim",
    "crates/ransomware-demo",
    "crates/ikrl-transport",
    "crates/ikrl-linux",
    "crates/ikrl-windows",
    "crates/ikrl-ai",
    "crates/ikrl-federation",
    "crates/ikrl-init",
    "crates/ikrl-fs",
    "crates/ikrl-cli",
    "crates/ikrl-bench",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["IntentKernel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/dmang69/cautious-octo-dollop"

[workspace.dependencies]
intentkernel-core = { path = "crates/intentkernel-core" }
intentkernel-crypto = { path = "crates/intentkernel-crypto" }
ikrl-transport = { path = "crates/ikrl-transport" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
sha3 = "0.10"
aes-gcm = "0.10"
rand = "0.9"
chrono = "0.4"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
nix = { version = "0.29", features = ["process", "ptrace", "signal"] }
ciborium = "0.2"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.16", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
tonic = "0.13"
prost = "0.13"
futures = "0.3"
mdns-sd = "0.13"
tempfile = "3.14"
walkdir = "2.5"
