[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ip-discrambler"
version = "0.1.0"
description = "Lightweight utility for resolving, decoding, and analyzing IP address information."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Daniel Kirk Owings" },
]
keywords = ["ip", "geolocation", "whois", "rdap", "threat-intelligence", "network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
    "ipwhois>=1.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
geo = ["geoip2>=4.8", "maxminddb>=2.2"]
dev = [
    "geoip2>=4.8",
    "maxminddb>=2.2",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
]

[project.scripts]
ipdis = "ip_discrambler.cli:main"

[project.urls]
Homepage = "https://github.com/dmang69/IP-Discrambler"
Repository = "https://github.com/dmang69/IP-Discrambler"

[tool.hatch.build.targets.wheel]
packages = ["src/ip_discrambler"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
