[package]
name = "eventscope"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
intentkernel-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
ikrl-transport = { workspace = true }

[dev-dependencies]
