[package]
name = "ikrl-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ikrl_bridge"
path = "src/lib.rs"

[[bin]]
name = "ikrl-bridge"
path = "src/main.rs"

[dependencies]
intentkernel-core = { workspace = true }
ikrl-transport = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }