[package]
name = "ikrl-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
intentkernel-core = { workspace = true }
intentkernel-crypto = { workspace = true }
ikrl-transport = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "ikrl_sdk"
crate-type = ["cdylib", "rlib"]
