[package]
name = "ikrl-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "IntentOS interactive shell — the user session layer"

[dependencies]
intentkernel-core = { workspace = true }
intentkernel-os = { path = "../intentkernel-os" }
ikrl-transport = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }