[package]
name = "ikrl-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
intentkernel-core = { workspace = true }
intentkernel-crypto = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
