[package]
name = "intentos-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "IntentOS tier-3 kernel — ground-up policy, crypto, capabilities, leases"

[dependencies]
intentos-audit = { path = "../intentos-audit" }
ed25519-dalek = "2.1"
sha3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }