[package]
name = "intentos-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "IntentOS native interactive shell"

[dependencies]
intentos-kernel = { path = "../intentos-kernel" }
intentos-utilities = { path = "../intentos-utilities" }
intentos-bench = { path = "../intentos-bench" }
anyhow = { workspace = true }
serde_json = { workspace = true }