[package]
name = "ransomware-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
intentkernel-core = { workspace = true }
intentkernel-crypto = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
